--- a/app/src/main/res/layout/content_profile.xml
+++ b/app/src/main/res/layout/content_profile.xml
@@ -5,7 +5,8 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="?attr/actionBarSize">
+        android:layout_marginTop="?attr/actionBarSize"
+        android:background="#f8f9fa">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -31,7 +32,7 @@
                     android:layout_margin="3dp"
                     android:padding="3dp"
                     android:text="Личные данные"
-                    android:textColor="@android:color/black"
+                    android:textColor="#484555"
                     android:textStyle="bold"/>
             </LinearLayout>
 
@@ -46,7 +47,7 @@
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:layout_gravity="center"
-                    android:background="@color/special_grey"
+                    android:src="@drawable/image_foto"
                     android:scaleType="centerCrop"/>
             </LinearLayout>
 
@@ -55,19 +56,24 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp">
 
+                <ImageView
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="3dp"
+                    android:src="@drawable/login"/>
+
                 <EditText
                     android:id="@+id/login"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
                     android:layout_margin="2dp"
                     android:background="#00000000"
-                    android:cursorVisible="false"
                     android:ems="10"
-                    android:focusable="false"
                     android:hint="Логин"
                     android:imeOptions="flagNavigateNext"
-                    android:longClickable="false"
                     android:singleLine="true"
+                    android:textColorHint="#494456"
                     android:textSize="15sp"/>
             </LinearLayout>
 
@@ -80,6 +86,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp">
+
+                <ImageView
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="3dp"
+                    android:src="@drawable/password"/>
 
                 <EditText
                     android:id="@+id/password"
@@ -87,12 +100,10 @@
                     android:layout_height="30dp"
                     android:layout_margin="2dp"
                     android:background="#00000000"
-                    android:cursorVisible="false"
                     android:ems="10"
-                    android:focusable="false"
                     android:hint="Пароль"
                     android:inputType="textPassword"
-                    android:longClickable="false"
+                    android:textColorHint="#494456"
                     android:textSize="15sp"/>
             </LinearLayout>
 
@@ -105,6 +116,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp">
+
+                <ImageView
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="3dp"
+                    android:src="@drawable/forget_pass"/>
 
                 <EditText
                     android:id="@+id/confirm"
@@ -112,12 +130,10 @@
                     android:layout_height="30dp"
                     android:layout_margin="2dp"
                     android:background="#00000000"
-                    android:cursorVisible="false"
                     android:ems="10"
-                    android:focusable="false"
                     android:hint="Подтвердить пароль"
                     android:inputType="textPassword"
-                    android:longClickable="false"
+                    android:textColorHint="#494456"
                     android:textSize="15sp"/>
             </LinearLayout>
 
@@ -130,6 +146,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp">
+
+                <ImageView
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="3dp"
+                    android:src="@drawable/phone"/>
 
                 <EditText
                     android:id="@+id/phone"
@@ -137,12 +160,11 @@
                     android:layout_height="30dp"
                     android:layout_margin="2dp"
                     android:background="#00000000"
-                    android:cursorVisible="false"
                     android:ems="10"
-                    android:focusable="false"
                     android:hint="Телефон +38"
                     android:inputType="phone"
-                    android:longClickable="false"
+                    android:maxLength="13"
+                    android:textColorHint="#494456"
                     android:textSize="15sp"/>
             </LinearLayout>
 
@@ -155,6 +177,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp">
+
+                <ImageView
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="3dp"
+                    android:src="@drawable/address"/>
 
                 <EditText
                     android:id="@+id/address"
@@ -162,13 +191,11 @@
                     android:layout_height="30dp"
                     android:layout_margin="2dp"
                     android:background="#00000000"
-                    android:cursorVisible="false"
                     android:ems="10"
-                    android:focusable="false"
                     android:hint="Адрес"
                     android:imeOptions="flagNavigateNext"
-                    android:longClickable="false"
                     android:singleLine="true"
+                    android:textColorHint="#494456"
                     android:textSize="15sp"/>
             </LinearLayout>
 
@@ -181,6 +208,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp">
+
+                <ImageView
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="3dp"
+                    android:src="@drawable/company"/>
 
                 <EditText
                     android:id="@+id/company"
@@ -188,13 +222,11 @@
                     android:layout_height="30dp"
                     android:layout_margin="2dp"
                     android:background="#00000000"
-                    android:cursorVisible="false"
                     android:ems="10"
-                    android:focusable="false"
                     android:hint="Название компании"
                     android:imeOptions="flagNavigateNext"
-                    android:longClickable="false"
                     android:singleLine="true"
+                    android:textColorHint="#494456"
                     android:textSize="15sp"/>
             </LinearLayout>
 
@@ -208,19 +240,25 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp">
 
+                <ImageView
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="3dp"
+                    android:src="@drawable/site"/>
+
                 <EditText
                     android:id="@+id/site"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
                     android:layout_margin="2dp"
                     android:background="#00000000"
-                    android:cursorVisible="false"
                     android:ems="10"
-                    android:focusable="false"
                     android:hint="Сайт компании"
-                    android:imeOptions="flagNavigateNext"
-                    android:longClickable="false"
+                    android:imeOptions="actionDone"
+                    android:inputType="textUri"
                     android:singleLine="true"
+                    android:textColorHint="#494456"
                     android:textSize="15sp"/>
             </LinearLayout>
 
@@ -235,14 +273,22 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
                 android:gravity="left"
-                android:orientation="vertical">
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="3dp"
+                    android:src="@drawable/exit"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="30dp"
                     android:layout_marginLeft="5dp"
                     android:gravity="center"
-                    android:text="Выход"/>
+                    android:text="Выход"
+                    android:textColor="#494456"/>
 
             </LinearLayout>
         </LinearLayout>
