--- a/app/src/main/res/layout/content_sing_in.xml
+++ b/app/src/main/res/layout/content_sing_in.xml
@@ -6,18 +6,19 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="?attr/actionBarSize">
+        android:layout_marginTop="?attr/actionBarSize"
+        android:background="#f8f9fa">
 
         <TextView
             android:id="@+id/text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="18dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:gravity="center"
             android:text="Testing"
-            android:textColor="@android:color/black"
+            android:textColor="#484555"
             android:textSize="40sp"
             app:layout_constraintBottom_toTopOf="@+id/linearLayout"
             app:layout_constraintEnd_toEndOf="parent"
@@ -46,7 +47,7 @@
                     android:layout_margin="3dp"
                     android:gravity="center"
                     android:text="Данные для входа"
-                    android:textColor="@android:color/black"
+                    android:textColor="#484555"
                     android:textSize="12sp"
                     android:textStyle="bold"/>
             </LinearLayout>
@@ -69,6 +70,7 @@
                     android:hint="Логин"
                     android:imeOptions="flagNavigateNext"
                     android:singleLine="true"
+                    android:textColorHint="#e7e2f2"
                     android:textSize="14sp"/>
             </LinearLayout>
 
@@ -89,6 +91,7 @@
                     android:gravity="center"
                     android:hint="Пароль"
                     android:inputType="textPassword"
+                    android:textColorHint="#e7e2f2"
                     android:textSize="14sp"/>
             </LinearLayout>
 
@@ -108,7 +111,7 @@
                     android:gravity="center"
                     android:padding="10dp"
                     android:text="Вход"
-                    android:textColor="@android:color/black"
+                    android:textColor="#484555"
                     android:textStyle="bold"/>
             </LinearLayout>
 
@@ -124,6 +127,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
                     android:gravity="center"
+                    android:textColor="#a9a8b0"
                     android:text="Забыли пароль?"
                     android:textSize="12sp"/>
             </LinearLayout>
@@ -137,7 +141,7 @@
             android:layout_marginBottom="5dp"
             android:layout_marginEnd="5dp"
             android:layout_marginStart="5dp"
-            android:background="@android:color/holo_blue_light"
+            android:background="#4bc1fc"
             android:gravity="center"
             android:orientation="horizontal"
             android:padding="8dp"
