--- a/app/src/main/res/layout/content_sing_up.xml
+++ b/app/src/main/res/layout/content_sing_up.xml
@@ -5,7 +5,8 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="?attr/actionBarSize">
+        android:layout_marginTop="?attr/actionBarSize"
+        android:background="#f8f9fa">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -31,7 +32,7 @@
                     android:layout_margin="3dp"
                     android:padding="3dp"
                     android:text="Личные данные"
-                    android:textColor="@android:color/black"
+                    android:textColor="#484555"
                     android:textStyle="bold"/>
             </LinearLayout>
 
@@ -46,7 +47,7 @@
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:layout_gravity="center"
-                    android:background="@color/special_grey"
+                    android:src="@drawable/image_foto"
                     android:scaleType="centerCrop"/>
             </LinearLayout>
 
@@ -54,6 +55,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp">
+
+                <ImageView
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="3dp"
+                    android:src="@drawable/login"/>
 
                 <EditText
                     android:id="@+id/login"
@@ -65,6 +73,7 @@
                     android:hint="Логин"
                     android:imeOptions="flagNavigateNext"
                     android:singleLine="true"
+                    android:textColorHint="#494456"
                     android:textSize="15sp"/>
             </LinearLayout>
 
@@ -77,6 +86,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp">
+
+                <ImageView
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="3dp"
+                    android:src="@drawable/password"/>
 
                 <EditText
                     android:id="@+id/password"
@@ -87,6 +103,7 @@
                     android:ems="10"
                     android:hint="Пароль"
                     android:inputType="textPassword"
+                    android:textColorHint="#494456"
                     android:textSize="15sp"/>
             </LinearLayout>
 
@@ -99,6 +116,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp">
+
+                <ImageView
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="3dp"
+                    android:src="@drawable/forget_pass"/>
 
                 <EditText
                     android:id="@+id/confirm"
@@ -109,6 +133,7 @@
                     android:ems="10"
                     android:hint="Подтвердить пароль"
                     android:inputType="textPassword"
+                    android:textColorHint="#494456"
                     android:textSize="15sp"/>
             </LinearLayout>
 
@@ -121,6 +146,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp">
+
+                <ImageView
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="3dp"
+                    android:src="@drawable/phone"/>
 
                 <EditText
                     android:id="@+id/phone"
@@ -130,8 +162,9 @@
                     android:background="#00000000"
                     android:ems="10"
                     android:hint="Телефон +38"
-                    android:maxLength="13"
                     android:inputType="phone"
+                    android:maxLength="13"
+                    android:textColorHint="#494456"
                     android:textSize="15sp"/>
             </LinearLayout>
 
@@ -144,6 +177,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp">
+
+                <ImageView
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="3dp"
+                    android:src="@drawable/address"/>
 
                 <EditText
                     android:id="@+id/address"
@@ -155,6 +195,7 @@
                     android:hint="Адрес"
                     android:imeOptions="flagNavigateNext"
                     android:singleLine="true"
+                    android:textColorHint="#494456"
                     android:textSize="15sp"/>
             </LinearLayout>
 
@@ -167,6 +208,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp">
+
+                <ImageView
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="3dp"
+                    android:src="@drawable/company"/>
 
                 <EditText
                     android:id="@+id/company"
@@ -178,6 +226,7 @@
                     android:hint="Название компании"
                     android:imeOptions="flagNavigateNext"
                     android:singleLine="true"
+                    android:textColorHint="#494456"
                     android:textSize="15sp"/>
             </LinearLayout>
 
@@ -191,6 +240,13 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp">
 
+                <ImageView
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="3dp"
+                    android:src="@drawable/site"/>
+
                 <EditText
                     android:id="@+id/site"
                     android:layout_width="match_parent"
@@ -198,26 +254,37 @@
                     android:layout_margin="2dp"
                     android:background="#00000000"
                     android:ems="10"
-                    android:inputType="textUri"
                     android:hint="Сайт компании"
                     android:imeOptions="actionDone"
+                    android:inputType="textUri"
                     android:singleLine="true"
+                    android:textColorHint="#494456"
                     android:textSize="15sp"/>
             </LinearLayout>
 
         </LinearLayout>
 
-        <Button
+        <LinearLayout
             android:id="@+id/register_bt"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:background="@android:color/holo_blue_light"
-            android:text="Регистрация"
+            android:layout_height="45dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginStart="5dp"
+            android:background="#4bc1fc"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="Регистрация"
+                android:textColor="@android:color/white"
+                android:textSize="15sp"
+                android:textStyle="bold"/>
+        </LinearLayout>
     </android.support.constraint.ConstraintLayout>
 </layout>
